--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,16 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Barlow', sans-serif;
+
+}
+
+ul {
+  list-style: none;
 }
 
 a {
-  color: #00B7FF;
+  color: #009dff;
 }
