--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,41 @@
 doctype html
-html
+html(lang='en')
   head
     title= title
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css", integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N", crossorigin="anonymous")
+    script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js", integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj", crossorigin="anonymous")
+    script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js", integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+", crossorigin="anonymous")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+    div(class='container-fluid')
+      div(class='row')
+        div(class='col-sm-2')
+          block sidebar
+            ul(class='sidebar-nav')
+              li
+                a(href='/') Home
+              li
+                a(href='/collection') Collection
+              li
+                a(href='/collection/games') All games
+              li
+                a(href='/collection/developers') All developers
+              li
+                a(href='/collection/platforms') All platforms
+              li
+                a(href='/collection/genres') All genres
+              li
+                hr
+              li
+                a(href='/collection/game/create') Create new game
+              li
+                a(href='/collection/developer/create') Create new developer
+              li
+                a(href='/collection/platform/create') Create new platform
+              li
+                a(href='/collection/genre/create') Create new genre
+
+        div(class='col-sm-10')
+          block content
