--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,18 @@
   margin: 0;
   padding: 0;
   font-family: 'Barlow', sans-serif;
+}
 
+.sidebar {
+  height: 100vh;
+  position: sticky;
+  top: 0;
+  border-right: 1px solid #e3e3e3;
+  box-shadow: 0 0 20px #e3e3e3;
+}
+
+hr {
+  border-color: #e3e3e3;
 }
 
 ul {
@@ -12,5 +23,9 @@ ul {
 }
 
 a {
-  color: #009dff;
+  color: black;
+}
+
+a:hover {
+  color: black;
 }
