--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,9 +11,9 @@ html(lang='en')
   body
     div(class='container-fluid')
       div(class='row')
-        div(class='col-sm-2')
+        div(class='col-sm-2 sidebar')
           block sidebar
-            ul(class='sidebar-nav')
+            ul
               li
                 a(href='/') Home
               li
