--- a/views/index.pug
+++ b/views/index.pug
@@ -1,35 +1,4 @@
 extends layout
 
 block content
-  h1= title
-  br
-  h1= title
-  br
-  h1= title
-  br
-  h1= title
-  br
-  h1= title
-  br
-  h1= title
-  br
-  h1= title
-  br
-  h1= title
-  br
-  h1= title
-  br
-  h1= title
-  br
-  h1= title
-  br
-  h1= title
-  br
-  h1= title
-  br
-  h1= title
-  br
-  h1= title
-  br
-  h1= title
-  br
+  h2 #{title} to your gaming inventory collection for gamers
