--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,31 +11,22 @@ html(lang='en')
   body
     div(class='container-fluid')
       div(class='row')
-        div(class='col-sm-2 sidebar')
+        div(class='col-sm-2 pt-4 sidebar')
           block sidebar
-            ul
-              li
-                a(href='/') Home
-              li
-                a(href='/collection') Collection
-              li
-                a(href='/collection/games') All games
-              li
-                a(href='/collection/developers') All developers
-              li
-                a(href='/collection/platforms') All platforms
-              li
-                a(href='/collection/genres') All genres
-              li
-                hr
-              li
-                a(href='/collection/game/create') Create new game
-              li
-                a(href='/collection/developer/create') Create new developer
-              li
-                a(href='/collection/platform/create') Create new platform
-              li
-                a(href='/collection/genre/create') Create new genre
+            h1(class='text-center') Stack Gamerflow
+            hr
+            div(class='sidebar-links')
+              a(class='sidebar-link' href='/') Home
+              a(class='sidebar-link' href='/collection') Collection
+              a(class='sidebar-link' href='/collection/games') All games
+              a(class='sidebar-link' href='/collection/developers') All developers
+              a(class='sidebar-link' href='/collection/platforms') All platforms
+              a(class='sidebar-link' href='/collection/genres') All genres
+              hr
+              a(class='sidebar-link' href='/collection/game/create') Create new game
+              a(class='sidebar-link' href='/collection/developer/create') Create new developer
+              a(class='sidebar-link' href='/collection/platform/create') Create new platform
+              a(class='sidebar-link' href='/collection/genre/create') Create new genre
 
         div(class='col-sm-10')
           block content
