--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,7 +13,7 @@ html(lang='en')
       div(class='row')
         div(class='col-sm-2 pt-4 sidebar')
           block sidebar
-            h1(class='text-center') Stack Gamerflow
+            p(class='h2 text-center') Stack Gamerflow
             hr
             div(class='sidebar-links')
               a(class='sidebar-link' href='/') Home
