--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,16 +13,19 @@ html(lang='en')
       div(class='row')
         div(class='col-sm-2 pt-4 sidebar')
           block sidebar
-            p(class='h2 text-center') Stack Gamerflow
+            p(class='h2 text-center font-weight-bold') Stack Gamerflow
             hr
             div(class='sidebar-links')
               a(class='sidebar-link' href='/') Home
+              hr
+              p(class='h4 pl-3 font-weight-bold') Browse
               a(class='sidebar-link' href='/collection') Collection
               a(class='sidebar-link' href='/collection/games') All games
               a(class='sidebar-link' href='/collection/developers') All developers
               a(class='sidebar-link' href='/collection/platforms') All platforms
               a(class='sidebar-link' href='/collection/genres') All genres
               hr
+              p(class='h4 pl-3 font-weight-bold') Create
               a(class='sidebar-link' href='/collection/game/create') Create new game
               a(class='sidebar-link' href='/collection/developer/create') Create new developer
               a(class='sidebar-link' href='/collection/platform/create') Create new platform
