--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,20 +16,20 @@ html(lang='en')
             p(class='h2 text-center font-weight-bold') Stack Gamerflow
             hr
             div(class='sidebar-links')
-              a(class='sidebar-link' href='/') Home
+              a(class='px-4 py-2 sidebar-link' href='/') Home
               hr
-              p(class='h4 pl-3 font-weight-bold') Browse
-              a(class='sidebar-link' href='/collection') Collection
-              a(class='sidebar-link' href='/collection/games') All games
-              a(class='sidebar-link' href='/collection/developers') All developers
-              a(class='sidebar-link' href='/collection/platforms') All platforms
-              a(class='sidebar-link' href='/collection/genres') All genres
+              p(class='h4 pl-4 font-weight-bold') Browse
+              a(class='px-4 py-2 sidebar-link' href='/collection') Collection
+              a(class='px-4 py-2 sidebar-link' href='/collection/games') All games
+              a(class='px-4 py-2 sidebar-link' href='/collection/developers') All developers
+              a(class='px-4 py-2 sidebar-link' href='/collection/platforms') All platforms
+              a(class='px-4 py-2 sidebar-link' href='/collection/genres') All genres
               hr
-              p(class='h4 pl-3 font-weight-bold') Create
-              a(class='sidebar-link' href='/collection/game/create') Create new game
-              a(class='sidebar-link' href='/collection/developer/create') Create new developer
-              a(class='sidebar-link' href='/collection/platform/create') Create new platform
-              a(class='sidebar-link' href='/collection/genre/create') Create new genre
+              p(class='h4 pl-4 font-weight-bold') Create
+              a(class='px-4 py-2 sidebar-link' href='/collection/game/create') Create new game
+              a(class='px-4 py-2 sidebar-link' href='/collection/developer/create') Create new developer
+              a(class='px-4 py-2 sidebar-link' href='/collection/platform/create') Create new platform
+              a(class='px-4 py-2 sidebar-link' href='/collection/genre/create') Create new genre
 
         div(class='col-sm-10')
           block content
