Change name of site

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,7 +13,7 @@ html(lang='en')
       div(class='row')
         div(class='col-sm-2 pt-4 sidebar')
           block sidebar
-            p(class='h2 text-center font-weight-bold') Stack Gamerflow
+            p(class='h2 text-center font-weight-bold') Game Overflow
             hr
             div(class='sidebar-links')
               a(class='px-4 py-2 sidebar-link' href='/') Home
