--- a/views/home.pug
+++ b/views/home.pug
@@ -1,4 +1,11 @@
 extends layout
 
 block content
-  h2 #{title} to your gaming inventory collection for gamers
+  div(class="home-container")
+    div(class='p-4 text-center home')
+      h2 #{title} to your gaming inventory collection
+      hr
+      p Here you can browse a variety of games, game developers, genres, and platforms
+      p Or you're welcome to create a new one for others to discover
+      p Whichever you decide to do, thanks for taking the time to check out my project!
+      p You can check out my other projects on my #[a(href="https://github.com/brajpatel" target="_blank" class="github-link") github].
