--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,6 +40,7 @@ ul {
   border-radius: 50px;
   font-size: 1.1rem;
   outline: none;
+  transition: 0.1s;
 }
 
 .sidebar-link:hover {
@@ -55,15 +56,12 @@ ul {
   align-items: center;
 }
 
-.home,
-.collection {
-  font-size: 1.25rem;
-}
-
 .home {
+  font-size: 1.25rem;
   box-shadow: 0 0 20px #cbcbcb;
   border-radius: 20px;
   opacity: 0;
+  transform: translateY(-15px);
   animation: fadeIn 0.4s ease forwards;
 }
 
@@ -83,6 +81,21 @@ ul {
   color: rgb(81, 32, 255);
 }
 
-.collection p {
-  font-size: 1.4rem;
+.collection {
+  font-size: 1.3rem;
+  opacity: 0;
+  transform: translateX(15px);
+  animation: fromLeft 0.4s ease forwards;
+}
+
+@keyframes fromLeft {
+  from {
+    opacity: 0;
+    transform: translateX(15px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
