--- a/views/collection.pug
+++ b/views/collection.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  div(class="p-4 collection")
+  div(class="p-4 main-container")
     h1 The #{title}
     hr
     p Here you can see an overall view of the collection and its records.
