Position home container using bootstrap instead of css

--- a/views/home.pug
+++ b/views/home.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  div(class="home-container")
+  div(class="d-flex flex-column justify-content-center align-items-center home-container")
     div(class='p-4 text-center home')
       h2 #{title} to your gaming inventory collection
       hr
