Change home title text

--- a/views/home.pug
+++ b/views/home.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   div(class="d-flex flex-column justify-content-center align-items-center home-container")
     div(class='p-4 text-center home')
-      h2 #{title} to your gaming inventory collection
+      h2 #[strong #{title} to Game Overflow]
       hr
       p Here you can browse a variety of games, game developers, genres, and platforms
       p Or you're welcome to create a new one for others to discover
