--- a/views/game_list.pug
+++ b/views/game_list.pug
@@ -9,7 +9,8 @@ block content
         li(class="text-center game-card" style=`--delay:${index + 1}`)
           a(href=game.url) 
             img(src=(game.image==='' ? '/images/default-image.jpg' : game.image) alt="game image")
-            p #{game.name}
+            p(class="p-2") #{game.name}
+            p #{game.developer.name}
 
       else
         li There are no games.
