--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,7 +15,7 @@ html(lang='en')
           block sidebar
             p(class='h2 text-center font-weight-bold') Game Overflow
             hr
-            div(class='sidebar-links')
+            div(class='d-flex flex-column')
               a(class='px-4 py-2 sidebar-link' href='/') Home
               hr
               p(class='h4 pl-4 font-weight-bold') Browse
