--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,6 +10,10 @@ h1 {
   font-family: 'REM', sans-serif;
 }
 
+p {
+  margin: 0;
+}
+
 a {
  color: black;
 }
@@ -29,11 +33,6 @@ hr {
 
 ul {
   list-style: none;
-}
-
-.sidebar-links {
-  display: flex;
-  flex-direction: column;
 }
 
 .sidebar-link {
@@ -104,11 +103,16 @@ ul {
 .game-card {
   max-width: 350px;
   border-radius: 10px;
-  box-shadow: 0 0 20px #cbcbcb;
-  opacity: 0;
-  transform: translateX(10px);
-  animation: cascadeFadeIn 0.5s ease forwards;
-  animation-delay: calc(0.15s * var(--delay));
+  border: 1px solid #dfdfdf;
+  /* opacity: 0; */
+  /* transform: translateX(10px); */
+  transition: 0.25s ease;
+  /* animation: cascadeFadeIn 0.5s ease forwards; */
+  /* animation-delay: calc(0.15s * var(--delay)); */
+}
+
+.game-card:hover {
+  box-shadow: 0 0 20px #a0a0a0;
 }
 
 @keyframes cascadeFadeIn {
@@ -121,6 +125,11 @@ ul {
     opacity: 1;
     transform: translateX(0);
   }
+}
+
+.game-card a:hover {
+  color: black;
+  text-decoration: none;
 }
 
 .game-card img {
