--- a/views/platform_list.pug
+++ b/views/platform_list.pug
@@ -4,10 +4,10 @@ block content
   div(class="p-4 main-container")
     h1= title
     hr
-    ul
+    ul(class="d-flex flex-wrap")
       each platform, index in platform_list
-        li(class="mb-2 initial-position cascade-fade-in" style=`--delay:${index + 1}`)
-          a(href=platform.url class="h4") #{platform.name}
+        li(class="mr-4 mb-4 px-4 py-2 initial-position cascade-fade-in card" style=`--delay:${index + 1}`)
+          a(href=platform.url) #{platform.name}
 
       else
         li There are no platforms here! Be the first to create one.
