Space out p elements

--- a/views/collection.pug
+++ b/views/collection.pug
@@ -4,9 +4,9 @@ block content
   div(class="p-4 main-container")
     h1 The #{title}
     hr
-    p Here you can see an overall view of the collection and its records.
+    p(class="mb-2") Here you can see an overall view of the collection and its records.
 
-    p The collection currently has the following record counts: 
+    p(class="mb-3") The collection currently has the following record counts: 
 
     ul
       li(class="mb-1") #[strong Games:] !{game_count}
