--- a/views/genre_list.pug
+++ b/views/genre_list.pug
@@ -6,7 +6,7 @@ block content
     hr
     ul(class="d-flex flex-wrap")
       each genre, index in genre_list
-        li(class="mr-4 mb-4 px-4 py-2 initial-position cascade-fade-in card" style=`--delay:${index + 1}`)
+        li(class="cascade-fade-in card" style=`--delay:${index + 1}`)
           a(href=genre.url) #{genre.name}
 
       else
