--- a/views/game_list.pug
+++ b/views/game_list.pug
@@ -6,7 +6,7 @@ block content
     hr
     ul(class="d-flex flex-wrap game-list")
       each game, index in game_list
-        li(class="text-center initial-position cascade-fade-in game-card" style=`--delay:${index + 1}`)
+        li(class="text-center cascade-fade-in game-card" style=`--delay:${index + 1}`)
           a(href=game.url) 
             img(src=(game.image==='' ? '/images/default-image.jpg' : game.image) alt="game image")
             div(class="p-2")
