--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -162,6 +162,21 @@ ul {
   box-shadow: 0 0 20px #d6d6d6;
 }
 
+.game-title {
+  font-size: 2rem;
+  border-bottom: 1px solid #dfdfdf;
+  padding-bottom: 0.4rem;
+}
+
 .game-detail img {
   max-width: 100%;
+  border-radius: 15px;
+}
+
+.game-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.6rem;
+  border: 1px solid #dfdfdf;
 }
