--- a/views/game_detail.pug
+++ b/views/game_detail.pug
@@ -2,16 +2,23 @@ extends layout
 
 block content
   div(class="p-4 main-container")
-    h1= title
-    hr
-    div(class="row game-detail")
-      div(class="col-sm-6")
+    div(class="row mt-3 game-detail")
+      div(class="col-sm-5")
         img(src=(game.image==='' ? '/images/default-image.jpg' : game.image) alt="game image")
-      div(class="col-sm-6")
-        p #{game.release_date}
-        p #{game.developer.name}
+      div(class="col-sm-7 game-info")
+        p(class="game-title") #[strong #{title}]
         p #{game.description}
-        each genre in game.genre
-          p #{genre.name}
-        each platform in game.platform
-          p #{platform.name}
+        p #[strong Initial release date:] #{game.release_date}
+        p #[strong Developer:] #[a(href=game.developer.url) #{game.developer.name}]
+        p #[strong Genres: ]
+          if game.genre.length
+            each genre in game.genre
+              a(href=genre.url class="mr-2") #{genre.name}
+          else
+            span None
+        p #[strong Platforms: ]
+          if game.platform.length
+            each platform in game.platform
+              a(href=platform.url class="mr-2") #{platform.name}
+          else
+            span None
