--- a/views/game_detail.pug
+++ b/views/game_detail.pug
@@ -3,12 +3,12 @@ extends layout
 block content
   div(class="p-4 main-container")
     div(class="row mt-3 game-detail")
-      div(class="col-sm-5")
+      div(class="col-sm-7")
         img(src=(game.image==='' ? '/images/default-image.jpg' : game.image) alt="game image")
-      div(class="col-sm-7 game-info")
+      div(class="col-sm-5 text-center game-info")
         p(class="game-title") #[strong #{title}]
         p #{game.description}
-        p #[strong Initial release date:] #{game.release_date}
+        p #[strong Initial release date:] #{game.release_date_formatted}
         p #[strong Developer:] #[a(href=game.developer.url) #{game.developer.name}]
         p #[strong Genres: ]
           if game.genre.length
