--- a/views/developer_detail.pug
+++ b/views/developer_detail.pug
@@ -4,3 +4,13 @@ block content
   div(class="p-4 main-container")
     h1 #{title}
     hr
+    ul(class="d-flex flex-wrap game-list")
+      each game, index in developer_games
+        li(class="text-center cascade-fade-in game-card" style=`--delay:${index + 1}`)
+          a(href=game.url) 
+            img(src=(game.image==='' ? '/images/default-image.jpg' : game.image) alt="game image")
+            div(class="p-2")
+              p #[strong #{game.name}]
+
+      else
+        li This developer has no games.
