--- a/views/genre_form.pug
+++ b/views/genre_form.pug
@@ -4,10 +4,9 @@ block content
   div(class="p-4 main-container")
     h1 #{title}
     hr
-    form(action="" method="POST")
-      div(class="form-group")
-        label(for="name")
-        input(class="form-control" id="name" name="name" placeholder="Shooter, Racing, Party etc." value=(genre===undefined ? '' : genre.name) type="text")
+    form(class="form-group d-flex flex-column" action="" method="POST")
+        label(for="name") #[strong Genre:]
+        input(class="form-input mb-3" id="name" name="name" placeholder="Shooter, Racing, Party etc." value=(genre===undefined ? '' : genre.name) type="text" autofocus)
         button(class="btn submit-btn" type="submit") Submit
 
     if errors
