--- a/views/genre_delete.pug
+++ b/views/genre_delete.pug
@@ -5,7 +5,7 @@ block content
     h1 #{title}
     hr
     if genre_games.length
-      p #[strong Delete the following games before attempting to delete this genre:]
+      p(class="mb-3") #[strong Delete the following games before attempting to delete this genre:]
       ul(class="d-flex flex-wrap game-list")
         each game, index in genre_games
           li(class="text-center cascade-fade-in game-card" style=`--delay:${index + 1}`)
@@ -14,8 +14,8 @@ block content
               div(class="p-2")
                 p #[strong #{game.name}]
 
-        else
-          p #[strong Do you really want to delete this genre?]
-          form(action="" method="POST")
-            input(class="form-input mb-3" id="genreid" name="genreid" value=genre._id type="hidden")
-            button(class="btn submit-btn" type="submit") Delete
+    else
+        p(class="mb-3") #[strong Do you really want to delete this genre?]
+        form(action="" method="POST")
+          input(class="form-input mb-3" id="genreid" name="genreid" value=genre._id type="hidden")
+          button(class="btn submit-btn" type="submit") Delete
