--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -208,17 +208,20 @@ form {
   align-items: start;
 }
 
-.form-input {
+.form-input,
+.submit-btn {
   outline: none;
+  padding: 0.375rem 0.75rem;
+  border-radius: 0.25rem;
+  transition: 0.25s ease-in-out;
+}
+
+.form-input {
   width: 100%;
   height: calc(1.5em + .75rem + 2px);
-  padding: 0.375rem 0.75rem;
   font-size: 1.05rem;
   color: #495057;
-  background-color: #fff;
-  border: 1px solid #ced4da;
-  border-radius: .25rem;
-  transition: box-shadow .25s ease-in-out;
+  border: 1px solid #e5e5e5;
 }
 
 .form-input:focus {
@@ -228,6 +231,8 @@ form {
 .submit-btn {
   background: rgb(124, 105, 191);
   color: white;
+  border: none;
+  font-size: 1rem;
 }
 
 .submit-btn:hover {
