--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,6 +22,11 @@ a:hover {
   color: rgb(81, 32, 255);
 }
 
+.page {
+  display: grid;
+  grid-template-columns: 300px 1fr;
+}
+
 .sidebar {
   height: 100vh;
   max-height: 100vh;
@@ -57,6 +62,7 @@ ul {
 }
 
 .home {
+  margin: 0 2rem;
   font-size: 1.25rem;
   box-shadow: 0 0 20px #cbcbcb;
   border-radius: 20px;
