--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,8 +10,8 @@ html(lang='en')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     div(class='container-fluid')
-      div(class='row')
-        div(class='col-sm-2 pt-4 sidebar')
+      div(class='row page')
+        div(class='px-3 pt-4 sidebar')
           block sidebar
             p(class='h2 text-center font-weight-bold') Game Overflow
             hr
@@ -31,5 +31,5 @@ html(lang='en')
               a(class='px-4 py-2 sidebar-link' href='/collection/platform/create') Create new platform
               a(class='px-4 py-2 sidebar-link' href='/collection/genre/create') Create new genre
 
-        div(class='col-sm-10')
+        div
           block content
