--- a/views/game_detail.pug
+++ b/views/game_detail.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   div(class="p-4 main-container")
-    div(class="row mt-3 game-detail")
+    div(class="mt-3 game-detail")
       div
         img(src=(game.image==='' ? '/images/default-image.jpg' : game.image) alt="game image")
       div(class="text-center game-info")
