--- a/views/genre_detail.pug
+++ b/views/genre_detail.pug
@@ -16,4 +16,4 @@ block content
         li This genre has no games.
 
     p
-      a(href=genre.url + '/delete') Delete Genre
+      a(href=genre.url + '/delete' class="py-2 action-btn") Delete Genre
