--- a/views/genre_delete.pug
+++ b/views/genre_delete.pug
@@ -2,22 +2,22 @@ extends layout
 
 block content
   div(class="p-4 main-container")
-  if genre_games.length
-    h1 #{title}
-    hr
-    p(class="mb-3") #[strong Delete the following games before attempting to delete this genre:]
-    ul(class="d-flex flex-wrap game-list")
-      each game, index in genre_games
-        li(class="text-center cascade-fade-in game-card" style=`--delay:${index + 1}`)
-          a(href=game.url) 
-            img(src=(game.image==='' ? '/images/default-image.jpg' : game.image) alt="game image")
-            div(class="p-2")
-              p #[strong #{game.name}]
+    if genre_games.length
+      h1 #{title}
+      hr
+      p(class="mb-3") #[strong Delete the following games before attempting to delete this genre:]
+      ul(class="d-flex flex-wrap game-list")
+        each game, index in genre_games
+          li(class="text-center cascade-fade-in game-card" style=`--delay:${index + 1}`)
+            a(href=game.url) 
+              img(src=(game.image==='' ? '/images/default-image.jpg' : game.image) alt="game image")
+              div(class="p-2")
+                p #[strong #{game.name}]
 
-  else
+    else
       h1 Delete #{title}
       hr
       p(class="mb-3") #[strong Do you really want to delete this genre?]
       form(action="" method="POST")
         input(class="form-input mb-3" id="genreid" name="genreid" value=genre._id type="hidden")
-        button(class="btn submit-btn" type="submit") Delete
+        button(class="action-btn" type="submit") Delete
