--- a/views/platform_detail.pug
+++ b/views/platform_detail.pug
@@ -14,3 +14,5 @@ block content
 
       else
         li This platform has no games.
+
+    a(href=platform.url + '/delete' class="py-2 action-btn") Delete Platform
