--- a/views/platform_form.pug
+++ b/views/platform_form.pug
@@ -7,7 +7,7 @@ block content
     form(class="form-group d-flex flex-column" action="" method="POST")
         label(for="name") #[strong Platform:]
         input(class="form-input mb-3" id="name" name="name" placeholder="Playstation 5, Xbox One etc." value=(platform===undefined ? '' : platform.name) type="text" autofocus)
-        button(class="submit-btn" type="submit") Submit
+        button(class="action-btn" type="submit") Submit
 
     if errors
       ul
