Reposition delete button

--- a/views/developer_detail.pug
+++ b/views/developer_detail.pug
@@ -14,3 +14,5 @@ block content
 
       else
         li This developer has no games.
+
+    a(href=developer.url + '/delete' class="mt-1 py-2 action-btn") Delete Developer
