--- a/views/genre_detail.pug
+++ b/views/genre_detail.pug
@@ -15,5 +15,4 @@ block content
       else
         li This genre has no games.
 
-    p
-      a(href=genre.url + '/delete' class="py-2 action-btn") Delete Genre
+    a(href=genre.url + '/delete' class="mt-1 py-2 action-btn") Delete Genre
