--- a/views/genre_form.pug
+++ b/views/genre_form.pug
@@ -6,7 +6,7 @@ block content
     hr
     form(class="form-group d-flex flex-column" action="" method="POST")
         label(for="name") #[strong Genre:]
-        input(class="form-input mb-3" id="name" name="name" placeholder="Shooter, Racing, Party etc." value=(genre===undefined ? '' : genre.name) type="text" autofocus)
+        input(class="form-input mb-3" id="name" name="name" placeholder="Shooter, Racing, Party etc." value=(genre===undefined ? '' : genre.name) required="true" type="text" autofocus)
         button(class="action-btn" type="submit") Submit
 
     if errors
