--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -214,6 +214,10 @@ form {
   align-items: start;
 }
 
+label {
+  margin: 0;
+}
+
 .form-input,
 .action-btn {
   outline: none;
@@ -232,6 +236,39 @@ form {
 
 .form-input:focus {
   box-shadow: 0 0 5px rgb(124, 105, 191);
+}
+
+.checkbox-list {
+  display: flex;
+  gap: 1.5rem;
+}
+
+.checkbox-container {
+  display: flex;
+  align-items: center;
+}
+
+input[type="checkbox"] {
+  outline: none;
+  display: none;
+}
+
+.checkbox {
+  background: white;
+  color: white;
+  border: 2px solid rgb(124, 105, 191);
+  border-radius: 50%;
+  height: 20px;
+  width: 20px;
+  font-size: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 0.25rem;
+}
+
+input[type="checkbox"]:checked ~ .checkbox {
+  background: rgb(124, 105, 191);
 }
 
 a.action-btn {
