--- a/views/game_form.pug
+++ b/views/game_form.pug
@@ -30,17 +30,19 @@ block content
                 option(value=developer._id) #{developer.name}
         
         label(for="platform") #[strong Platform:]
-        div(class="mb-3")
+        div(class="checkbox-list mb-3")
           for platform in platforms
-            div(class="d-inline mr-4")
-              input(class="checkbox mr-2" name='platform' id=platform._id, value=platform._id, checked=platform.checked type='checkbox')
+            div(class="checkbox-container")
+              input(name='platform' id=platform._id, value=platform._id, checked=platform.checked type='checkbox')
+              p(class="checkbox") &#10004;
               label(for=platform._id) #{platform.name}
             
         label(for="genre") #[strong Platform:]
-        div(class="mb-3")
+        div(class="checkbox-list mb-3")
           for genre in genres
-            div(class="d-inline mr-4")
-              input(class="checkbox mr-2" name='genre' id=genre._id, value=genre._id, checked=genre.checked type='checkbox')
+            div(class="checkbox-container")
+              input(name='genre' id=genre._id, value=genre._id, checked=genre.checked type='checkbox')
+              p(class="checkbox") &#10004;
               label(for=genre._id) #{genre.name}
 
         button(class="action-btn" type="submit") Submit
