--- a/views/platform_detail.pug
+++ b/views/platform_detail.pug
@@ -15,4 +15,4 @@ block content
       else
         li This platform has no games.
 
-    a(href=platform.url + '/delete' class="mt-1 py-2 action-btn") Delete Platform
+    a(href=platform.url + '/delete' class="py-2 action-btn") Delete Platform
