--- a/views/game_detail.pug
+++ b/views/game_detail.pug
@@ -5,7 +5,7 @@ block content
     div(class="mt-3 game-detail")
       div
         img(src=(game.image==='' ? '/images/default-image.jpg' : game.image) alt="game image")
-      div(class="text-center game-info")
+      div(class="text-center px-4 py-3 game-info")
         p(class="game-title") #[strong #{title}]
         p #{game.description}
         p #[strong Price: ]
@@ -32,3 +32,4 @@ block content
               a(href=platform.url class="mr-2") #{platform.name}
           else
             span None
+        a(href=game.url + '/delete' class="mt-1 py-2 action-btn") Delete Game
