--- a/views/developer_detail.pug
+++ b/views/developer_detail.pug
@@ -15,4 +15,4 @@ block content
       else
         li This developer has no games.
 
-    a(href=developer.url + '/delete' class="py-2 action-btn") Delete Developer
+    a(href=developer.url + '/delete' class="action-btn") Delete Developer
