--- a/views/game_detail.pug
+++ b/views/game_detail.pug
@@ -32,4 +32,4 @@ block content
               a(href=platform.url class="mr-2") #{platform.name}
           else
             span None
-        a(href=game.url + '/delete' class="mt-1 py-2 action-btn") Delete Game
+        a(href=game.url + '/delete' class="align-self-center action-btn") Delete Game
