--- a/views/game_form.pug
+++ b/views/game_form.pug
@@ -44,6 +44,12 @@ block content
               input(name='genre' id=genre._id, value=genre._id, checked=genre.checked type='checkbox')
               p(class="checkbox") &#10004;
               label(for=genre._id) #{genre.name}
+              
+        hr
+        hr
+        h1 Image upload goes here
+        hr
+        hr
 
         button(class="action-btn" type="submit") Submit
 
