--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -216,7 +216,7 @@ form {
 }
 
 label {
-  margin: 0;
+  margin-bottom: 0.5rem;
 }
 
 .form-input,
@@ -270,6 +270,10 @@ input[type="checkbox"] {
 
 input[type="checkbox"]:checked ~ .checkbox {
   background: rgb(124, 105, 191);
+}
+
+.checkbox ~ label {
+  margin: 0;
 }
 
 a.action-btn {
