--- a/views/game_form.pug
+++ b/views/game_form.pug
@@ -33,7 +33,7 @@ block content
         div(class="checkbox-list mb-3")
           for platform in platforms
             div(class="checkbox-container")
-              input(name='platform' id=platform._id, value=platform._id, checked=platform.checked type='checkbox')
+              input(name='platform' id=platform._id value=platform._id checked=platform.checked type='checkbox')
               p(class="checkbox") &#10004;
               label(for=platform._id) #{platform.name}
             
@@ -41,7 +41,7 @@ block content
         div(class="checkbox-list mb-3")
           for genre in genres
             div(class="checkbox-container")
-              input(name='genre' id=genre._id, value=genre._id, checked=genre.checked type='checkbox')
+              input(name='genre' id=genre._id value=genre._id checked=genre.checked type='checkbox')
               p(class="checkbox") &#10004;
               label(for=genre._id) #{genre.name}
               
