Use uploaded image file path in game model

--- a/views/game_list.pug
+++ b/views/game_list.pug
@@ -8,7 +8,7 @@ block content
       each game, index in game_list
         li(class="text-center cascade-fade-in game-card" style=`--delay:${index + 1}`)
           a(href=game.url) 
-            img(src=(game.image==='' ? '/images/default-image.jpg' : game.image) alt="game image")
+            img(src=(game.image==='' ? '/images/default-image.jpg' : `/${game.image}`) alt="game image")
             div(class="p-2")
               p #[strong #{game.name}]
               p - #{game.developer.name} -
