--- a/views/game_detail.pug
+++ b/views/game_detail.pug
@@ -6,7 +6,7 @@ block content
       div
         img(src=`/images/${game.image}` alt="game image")
       div(class="text-center px-4 py-3 game-info")
-        p(class="game-title") #[strong #{title}]
+        p(class="game-title capitalise") #[strong #{title}]
         p #{game.description}
         p #[strong Price: ]
           if game.price > 0
