Correct game id typo

--- a/views/game_delete.pug
+++ b/views/game_delete.pug
@@ -6,5 +6,5 @@ block content
     hr
     p(class="mb-3") #[strong Do you really want to delete this game?]
     form(action="" method="POST")
-      input(class="form-input mb-3" id="game" name="game" value=game._id type="hidden")
+      input(class="form-input mb-3" id="gameid" name="gameid" value=game._id type="hidden")
       button(class="action-btn" type="submit") Delete
