Correct genre label text

--- a/views/game_form.pug
+++ b/views/game_form.pug
@@ -37,7 +37,7 @@ block content
               p(class="checkbox") &#10004;
               label(for=platform._id) #{platform.name}
             
-        label(for="genre") #[strong Platform:]
+        label(for="genre") #[strong Genre:]
         div(class="checkbox-list mb-3")
           for genre in genres
             div(class="checkbox-container")
