--- a/views/game_detail.pug
+++ b/views/game_detail.pug
@@ -32,6 +32,6 @@ block content
               a(href=platform.url class="mr-2") #{platform.name}
           else
             span None
-        div(class="actions-container")
+        div(class="actions-container game-actions")
           a(href=game.url + '/update' class="align-self-center action-btn") Update Game
           a(href=game.url + '/delete' class="align-self-center action-btn") Delete Game
