--- a/views/developer_detail.pug
+++ b/views/developer_detail.pug
@@ -15,4 +15,6 @@ block content
       else
         li This developer has no games.
 
-    a(href=developer.url + '/delete' class="action-btn") Delete Developer
+    div(class="actions-container")
+      a(href=developer.url + '/udpate' class="action-btn") Update Developer
+      a(href=developer.url + '/delete' class="action-btn") Delete Developer
